# Cistern

./: .gitmodules  README.md  diff.txt
code/: .post_dataHot4.txt.swp  ArduSPIReader.py  Display.py  ExampleCodeFromMFR.py  Format.py  Main.py  PostProcessing.py  Simple_collection.py  config.txt  csv_test.py  data_collection.py  normData.txt  requirements.txt  run.sh  runMain.bat
code/ArduThermocouple/: ArduThermocouple.ino
code/sensors/: Thermo_1wire.py  Thermo_MAX31855.py  dataq.py  pressure.py
cpp_version/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp_version/src/: main.cpp  main.cpp.save  sensor.cpp  sensor.h  thermo.cpp  thermo.h
old_code/: csv_test.py  dataq_DI1100_Test.py
service/: README  sensor_suite.service
